karnc/tests/fixtures/negative/98_http_duplicate_route/src/svc.karn
context svc

service api {
  on http GET "/orders/:id" (id: String) -> Effect[HttpResult[String]] {
    Ok("first")
  }

  on http GET "/orders/:id" (id: String) -> Effect[HttpResult[String]] {
    Ok("second")
  }
}
